--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">Wallet</string>
     <string name="action_settings">Settings</string>
-    <string name="add_new_todo_item_string">Add New ToDo Item</string>
-    <string name="title_string">Title</string>
+    <string name="add_new_todo_item_string">NEW ENTRY</string>
+    <string name="title_string">Description</string>
+    <string name="enter_title_string">Enter Description</string>
     <string name="done_string">Done</string>
     <string name="status_string">Status</string>
     <string name="not_done_string">Not Done</string>
@@ -16,8 +17,8 @@
     <string name="choose_time_string">Choose Time</string>
     <string name="cancel_string">Cancel</string>
     <string name="reset_string">Reset</string>
-    <string name="submit_string">Submit</string>
-    <string name="enter_title_string">Enter Title</string>
+    <string name="submit_string">OK</string>
     <string name="date_string">date</string>
     <string name="priority_string">Priority</string>
+    <string name="amount_string">Amount</string>
 </resources>
