--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,16 @@
 <resources>
     <string name="app_name">Wallet</string>
     <string name="action_settings">Settings</string>
-    <string name="add_new_todo_item_string">NEW ENTRY</string>
+    <string name="add_new_income_string">Income (+)</string>
+    <string name="add_new_expense_string">ADD NEW ENTRY</string>
     <string name="title_string">Description</string>
     <string name="enter_title_string">Enter Description</string>
-    <string name="done_string">Done</string>
-    <string name="status_string">Status</string>
-    <string name="not_done_string">Not Done</string>
-    <string name="priority_low_string">Low</string>
-    <string name="priority_medium_string">Medium</string>
-    <string name="priority_high_string">High</string>
+    <string name="income_string">Income</string>
+    <string name="expense_string">Expense</string>
+    <string name="type_string">Type</string>
+    <string name="cat_personal_string">Personal</string>
+    <string name="cat_other_string">Other</string>
+    <string name="cat_auto_string">Car</string>
     <string name="time_and_date_string">Time and Date</string>
     <string name="no_date_set_string">0000&#8211;00&#8211;00</string>
     <string name="no_time_set_string">00:00:00</string>
@@ -19,6 +20,6 @@
     <string name="reset_string">Reset</string>
     <string name="submit_string">OK</string>
     <string name="date_string">date</string>
-    <string name="priority_string">Priority</string>
+    <string name="category_str">Category</string>
     <string name="amount_string">Amount</string>
 </resources>
