--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Wallet</string>
     <string name="action_settings">Settings</string>
     <string name="add_new_income_string">Income (+)</string>
-    <string name="add_new_expense_string">ADD NEW ENTRY</string>
+    <string name="add_new_expense_string">Add New Entry</string>
     <string name="title_string">Description</string>
     <string name="enter_title_string">Enter Description</string>
     <string name="income_string">Income</string>
@@ -28,4 +28,5 @@
     <string name="options_menu_export_to_file">Export to file</string>
     <string name="options_menu_import_from_file">Import From File</string>
     <string name="options_menu_add_test_data">Add Test Data</string>
+    <string name="enter_description_string">Description</string>
 </resources>
